cmake_minimum_required(VERSION 3.10)
set(CMAKE_TOOLCHAIN_FILE "$ENV{PSPDEV}/psp/share/pspdev.cmake" CACHE PATH "toolchain file")
project(vme-ctx C CXX ASM)

add_executable(vme-ctx
  main.cpp
)

target_include_directories(vme-ctx PRIVATE ../)

target_compile_options(vme-ctx PRIVATE -Os -G0 -Wall -fno-pic)

target_compile_options(vme-ctx PRIVATE 
  $<$<COMPILE_LANGUAGE:CXX>:-std=c++11>
  $<$<COMPILE_LANGUAGE:CXX>:-fno-rtti>
  $<$<COMPILE_LANGUAGE:CXX>:-fno-exceptions>
)

target_link_libraries(vme-ctx
  me-core psppower pspge pspdisplay pspctrl pspdebug
)

create_pbp_file(TARGET vme-ctx TITLE "Switch RAM Context" BUILD_PRX)
